More memory tweaks