@@ -379,6 +379,7 @@
                 <configuration>
                     <argLine>-Duser.language=en</argLine>
                     <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
                     <useFile>false</useFile>
                 </configuration>
             </plugin>
